Fix pointer styles for collapsable sidebar with icons

--- a/projects/extra-clarity/sidebar-nav/src/components/sidebar-nav-item/sidebar-nav-item.component.scss
+++ b/projects/extra-clarity/sidebar-nav/src/components/sidebar-nav-item/sidebar-nav-item.component.scss
@@ -1,3 +1,11 @@
+:host {
+  cursor: auto;
+
+  cds-icon {
+    pointer-events: inherit;
+  }
+}
+
 /* This rule prevents from losing query params by clicking on the already activated link */
 a.active.disabled {
   pointer-events: none;
